--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "preview": "vite preview",
     "provision": "aws cloudformation deploy --template-file ./react-cors-spa-stack.yaml --stack-name kd-stack-2 --parameter-overrides BucketName=kd-bucket-2",
     "generate": "graphql-codegen",
-    "sync": "aws s3 sync dist/ s3://kelldev.design --delete",
-    "invalidate": "aws cloudfront create-invalidation --distribution-id E310RTA2TDL598 --paths '/*'",
-    "deploy": "npm run sync && npm run invalidate"
+    "aws:sync": "aws s3 sync dist/ s3://kelldev.design --delete",
+    "aws:invalidate": "aws cloudfront create-invalidation --distribution-id E310RTA2TDL598 --paths '/*'",
+    "aws:deploy": "npm run aws:sync && npm run aws:invalidate"
   },
   "dependencies": {
     "react": "^18.2.0",
