--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "aws:deploy": "npm run aws:sync && npm run aws:invalidate"
   },
   "dependencies": {
+    "@okta/okta-auth-js": "^7.5.0",
+    "@okta/okta-react": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
