--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@okta/okta-react": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
