--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@apollo/client": "^3.6.9",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.1",
+    "@heroicons/react": "^2.1.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.9",
